src/styles/upload.scss
@use '@surveyplanet/styles/src/colors.scss' as *;
@use '@surveyplanet/styles/src/sizes.scss' as *;
@use '@surveyplanet/styles/src/fonts.scss' as *;
@use '@surveyplanet/styles/src/functions.scss' as *;

.sp-image-upload {
	display: inline-flex;
	gap: $size-space--s;
	padding: $size-space--xs;
	box-sizing: border-box;

	input[type="file"] {
		display: none;
	}

	&.sp-image-upload--drag-over {
		border: 2px dashed $color--beige-darker;
		background-color: $color--beige;
		border-radius: $size-radius--default;

	}
}


.sp-image-upload--preview {
	display: flex;
	flex-wrap: nowrap;
	justify-content: center;
	align-items: center;
	width: px-to-rem(50);
	height: px-to-rem(50);
	border: 1px solid $color--beige-darker;
	border-radius: $size-radius--default;
	background-color: $color--white;
	overflow: hidden;

	img {
		width: 100%;
		height: 100%;
		object-fit: cover;
	}

	.sp-icon path {
		stroke: $color--beige-darker;
	}
}

.sp-image-upload--inner {
	display: flex;
	flex-direction: column;
	justify-content: space-between;
}

.sp-image-upload--note {
	font-size: $font-step--0;
	// line-height: $font-step--2;
}

